# MailChad

./: .env.example  .gitignore  LICENSE  README.md  architecture.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: backfill_unsub_log.py  build_zip.sh  check_opens.py  check_opens2.py  check_webhooks.py  cloud-entrypoint.sh  cloud.Dockerfile  deploy_lambda.py  entrypoint.sh  mkzip.py  requirements-cloud.txt  requirements-lambda.txt  setup_tables.py  terminal.Dockerfile  terminal.prod.Dockerfile  test_restore.py
deploy/iam/: ep-api-policy.json  ep-dispatcher-policy.json
docs/: CLIENT_HOSTED_DEPLOY.md  SEND-STRATEGY.md  lambda-dynamo-spec.md
docs/examples/: demo-template.json
scripts/: _backup.py  _init_handshake.py  seed.py  v3
scripts/_check/: drift  egress  healthz  isolation  secret-locality  suppression-mirror  vault-sleep
scripts/_probe/: env-dump-scan  exfil_attempt.sh  inject_pack_no_key.sh  inject_unsigned_event.sh  log-secret-scan  poison_pubkey.sh  replay_old_revision.sh  sync_flood.sh
src/mailchad/: __init__.py
src/mailchad/cloud/: compliance_public.py  compliance_tokens.py  db.py  dispatcher_lambda.py  dispatcher_local.py  keys.py  (+11 more)
tests/: conftest.py  leakage_e2e.py  live_e2e.py  test_backup.py  test_batch_send.py  test_consent_gating.py  test_dispatcher.py  test_dynamo_ops.py  test_email_clean.py  test_encryption.py  test_handshake.py  test_keys_lifecycle.py  test_materialiser.py  test_pack_unsub_pull.py  test_packs.py  test_settings.py  test_sync_protocol.py  test_webhook.py
(+36 files in other folders)
